out.txt
   Compiling rust_fin_rs v0.1.1 (/home/user/workspace_rust/rust_fin_rs)
error[E0599]: no method named `DateTime` found for struct `DateTime` in the current scope
   --> src/s_m_ohlcv/stock_market_ohlcv.rs:214:33
    |
214 |                 stock_data.date.DateTime(),
    |                                 ^^^^^^^^
    |
help: there is a method `time` with a similar name
    |
214 |                 stock_data.date.time(),
    |                                 ~~~~

error[E0599]: no method named `NaiveDate` found for struct `DateTime` in the current scope
   --> src/s_m_ohlcv/stock_market_ohlcv.rs:228:39
    |
228 |             stock_data_series[0].date.NaiveDate() - Duration::days(1),
    |                                       ^^^^^^^^^ method not found in `DateTime<Utc>`

error[E0599]: no method named `NaiveDate` found for struct `DateTime` in the current scope
   --> src/s_m_ohlcv/stock_market_ohlcv.rs:231:18
    |
229 | /             stock_data_series[stock_data_series_last_day_idx]
230 | |                 .date
231 | |                 .NaiveDate()
    | |                 -^^^^^^^^^ method not found in `DateTime<Utc>`
    | |_________________|
    |

error[E0599]: no method named `NaiveDate` found for struct `DateTime` in the current scope
   --> src/s_m_ohlcv/stock_market_ohlcv.rs:289:56
    |
289 |                         stock_data_series[ma_day].date.NaiveDate(),
    |                                                        ^^^^^^^^^ method not found in `DateTime<Utc>`

error[E0308]: mismatched types
   --> src/s_m_ohlcv/stock_market_test_ohlcv_show_chart.rs:132:34
    |
132 |     let open = Decimal::from_f64(base_stock_data_series[rng.gen_range(0..base_data_series_len)].0)
    |                ----------------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `f64`, found integer
    |                |
    |                arguments to this function are incorrect
    |
note: associated function defined here
   --> /opt/rust/registry/src/index.crates.io-1cd66030c949c28d/num-traits-0.2.19/src/cast.rs:486:8
    |
486 |     fn from_f64(n: f64) -> Option<Self> {
    |        ^^^^^^^^

Some errors have detailed explanations: E0308, E0599.
For more information about an error, try `rustc --explain E0308`.
error: could not compile `rust_fin_rs` (lib) due to 5 previous errors
warning: build failed, waiting for other jobs to finish...
error: could not compile `rust_fin_rs` (lib test) due to 5 previous errors
